<resources>
    <string name="app_name">Broachcutter Dealer</string>
    <string name="com.crashlytics.android.build_id">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_title">LOG IN</string>
    <string name="empty_username">Please enter a username.</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="login_unknown_error">An unknown error occurred during login. Please try again.</string>
    <string name="broachcutter_title">BroachCutter</string>
    <string name="search_toolbar">Search</string>
    <string name="cart_toolbar">Cart</string>
    <string name="magnetic_drilling_machines_title">Magnetic drilling machines</string>
    <string name="login_password_help">Passwords need to be at least 6 characters long, and can contain alphabets, numbers and some special characters</string>
    <string name="login_enter_new_password">Please enter a new password</string>
    <string name="login_set_password">Set password</string>
    <string name="login_reenter_password">Re-enter password</string>
    <string name="login_password">Password</string>
    <string name="login_passwords_mismatch">The passwords entered don\'t seem to match!</string>
    <string name="unknown_error_try_again">Unknown error occurred, try again</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="login_auth_failure">Incorrect password, please try again.</string>
    <string name="unregistered_email">Email isn\'t registered, please check and try again.</string>
    <string name="accessories">Accessories</string>
    <string name="core_drill_cutters">Core Drill Cutters</string>
    <string name="magnetic_drilling_machines">Magnetic Drilling Machines</string>
    <string name="spares">Spares</string>
    <string name="what_are_you_looking_to_order">What are you looking to order?</string>
    <string name="cub_trident_super_and_more">Cub, Trident, Super and more.</string>
    <string name="cutters">Cutters</string>
    <string name="annular_cutters">Annular Cutters</string>
    <string name="tct_and_hss_cutters">TCT and HSS Cutters</string>
    <string name="tct_cutters">TCT</string>
    <string name="hss_cutters">HSS</string>
    <string name="for_all_our_machines_and_types_of_cutters">For all our machines and types of cutters</string>
    <string name="for_each_of_our_machines_available">For each of our machines available</string>
    <string name="home_title">Welcome back, %s!</string>
    <string name="internal_error">Internal error!</string>
    <string name="error_no_internet_available">No internet!</string>
    <string name="error_timeout">Timeout!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="play_services_update">Play services update!</string>
    <string name="login_setup_error">Developer setup error!</string>
    <string name="unauthorized_error">Unauthorized!</string>
    <string name="error_message_format">%s | Code: %d</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_no">Quantity %d</string>
    <string name="add_to_cart_caps">ADD TO CART</string>
    <string name="article_number">Article Number: %s</string>
    <string name="you_can_search_for_a_cutter_by">You can search for a cutter by one of the following:</string>
    <string name="part_number">Part Number</string>
    <string name="specifications">Specifications</string>
    <string name="pilot_pins">Pilot Pins</string>
    <string name="item_number">Item Number</string>
    <string name="search">Search</string>
    <string name="cutter_pilot_pin_number">Cutter/Pilot Pin Number</string>
    <string name="type_of_cutter">Type of Cutter*</string>
    <string name="hss_caps">HSS</string>
    <string name="tct_caps">TCT</string>
    <string name="rail_caps">RAIL</string>
    <string name="depth_of_cut_mm">Depth of cut (mm)</string>
    <string name="diameter_mm">Diameter</string>
    <string name="order_history">Order History</string>
    <string name="account_information">Account Information</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="search_hint">Search by part num or description</string>
    <string name="no_results_desc">We didn’t find anything to show here, try a different search?</string>
    <string name="no_results_title">Oops! We didn’t find anything!</string>
    <string name="search_results">Search results</string>
    <string name="arbors">Arbors</string>
    <string name="adaptors">Adaptors</string>
    <string name="show_all_results">Show all results in %s…</string>
    <string name="invalid">Invalid</string>
    <string name="cutters_pilot_pins"><![CDATA[Cutters & Drills]]></string>
    <string name="enter_number_here">Enter number here</string>
    <string name="checkout">CHECKOUT</string>
    <string name="my_cart">My Cart</string>
    <string name="total_caps">TOTAL</string>
    <string name="qty_nos">Quantity: %d Nos.</string>
    <string name="rs_value">Rs. %d</string>
    <string name="rs_string">Rs. %s</string>
    <string name="select_payment_terms">Please select your payment terms</string>
    <string name="select_payment_terms_all">Please select payment terms for all cart items</string>
    <string name="choose_non_credit_payment_term">Please select non-credit terms for all coupon-discounted items</string>
    <string name="discount_applied">(Discount of \n %s applied)</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="login_subtitle">Welcome, Partner.</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_subtitle">Help us retrieve your info.</string>
    <string name="reset_caps">RESET</string>
    <string name="check_your_e_mail_id">Check your e-mail ID</string>
    <string name="reset_mail_sent">We’ve sent you a reset link on your registered dealer ID. Follow the link there to reset your password.</string>
    <string name="sign_out">Sign out</string>
    <string name="payment_terms">Payment terms</string>
    <string name="save_changes_caps">SAVE CHANGES</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax_line_item">%s @ %s%%</string>
    <string name="credit_warning">You’ve exceeded your credit limit by %s. Please choose non-credit payment terms or remove some items to continue.</string>
    <string name="overdue_payment">Overdue Payment</string>
    <string name="overdue_payment_detail">There is a payment overdue in your account. Please complete the payment to continue ordering through the app.\n\nYour cart contents will be saved for next time.</string>
    <string name="close_caps">CLOSE</string>
    <string name="payment_terms_footer1">Payment terms:&#160;</string>
    <string name="payment_terms_footer2">&#160;|&#160;</string>
    <string name="payment_terms_footer3">% discount</string>
    <string name="submit_order">Submit Order?</string>
    <string name="update_payment_term">Update payment Term?</string>
    <string name="submit_order_detail">Orders once placed cannot be cancelled or modified. Are you sure?</string>
    <string name="update_payment_term_detail">You selected %s for this %s. Do you want to set the same for all other %s in your cart?</string>
    <string name="yes_im_sure_caps">YES, I\'M SURE</string>
    <string name="no_go_back_caps">NO, GO BACK</string>
    <string name="your_order_is_confirmed">Your order is confirmed!</string>
    <string name="spares_desc">You can search for any machine spare part here</string>
    <string name="machine">Machine</string>
    <string name="search_by">Search by:</string>
    <string name="description">Description</string>
    <string name="update_term_to_all">Yes, apply to all</string>
    <string name="no_select_each">No, I will select each</string>
    <string name="part_number_hint">Enter the part number here</string>
    <string name="description_hint">Enter the description here</string>
    <string name="error_adding_cart">Error adding to cart: %s</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="spares_title">Results for %s spares: %s</string>
    <string name="enter_diameter_here">Enter diameter here</string>
    <string name="all_cutters">All cutters</string>
    <string name="doc_d">DoC %dmm</string>
    <string name="length_d">Length %dmm</string>
    <string name="diameter_s_mm">⌀%s mm</string>
    <string name="dia_x_doc">⌀%smm x %dmm</string>
    <string name="dia_s_x_doc">⌀%smm x %dmm</string>
    <string name="all_pilot_pins">All pilot pins</string>
    <string name="cub_amp_cub_auto"><![CDATA[CUB & CUB Auto]]></string>
    <string name="super_caps">SUPER</string>
    <string name="trident_caps">TRIDENT</string>
    <string name="titan_caps">TITAN</string>
    <string name="other_accessories">Other accessories</string>
    <string name="general_accessories">General Accessories</string>
    <string name="adaptors_extensions">Adaptors/Extensions</string>
    <string name="cub_accessories"><![CDATA[Cub & Cub Auto accessories]]></string>
    <string name="super_accessories">Super Accessories</string>
    <string name="trident_accessories">Trident Accessories</string>
    <string name="titan_accessories">Titan Accessories</string>
    <string name="machine_specific_accessories">Machine-specific accessories</string>
    <string name="back_to_products">BACK TO PRODUCTS</string>
    <string name="empty_cart_desc">Add some items to your cart and they’ll show up here!</string>
    <string name="empty_cart_title">Your cart is currently empty!</string>
    <string name="pending_orders_caps">PENDING ORDERS</string>
    <string name="view_all_orders_caps">VIEW ALL ORDERS</string>
    <string name="my_pending_orders">My Pending Orders</string>
    <string name="order_number_s">Order Number %s</string>
    <string name="currently_processing">Currently under processing</string>
    <string name="sp_and_sp">&#160;and&#160;</string>
    <string name="comma_sp">,&#160;</string>
    <string name="my_order_history">My Order History</string>
    <string name="order_history_subtitle">Browse through your pending and completed orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="pending_orders_this_month">Pending Orders this month</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="month_of_order">Month of order</string>
    <string name="year_of_order">Year of Order</string>
    <string name="dropdown">dropdown</string>
    <string name="cutter_material">Cutter Material</string>
    <string name="doc_25">25</string>
    <string name="doc_35">35</string>
    <string name="doc_50">50</string>
    <string name="doc_75">75</string>
    <string name="doc_5mm">5mm</string>
    <string name="doc_35mm">35mm</string>
    <string name="doc_100">100</string>
    <string name="mm">mm</string>
    <string name="doc_19_05">19.05</string>
    <string name="doc_31_75">31.75</string>
    <string name="morse_taper_mt">Morse Taper (MT)</string>
    <string name="shank_diameter">Shank Diameter</string>
    <string name="search_for_arbor">SEARCH FOR ARBOR</string>
    <string name="home">Home</string>
    <string name="app_settings">App Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open source licenses</string>
</resources>