<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_alt_bold"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/black"
        android:text="@string/app_settings"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/tos"
        style="@style/AppSettings"
        android:text="@string/terms_of_service"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_50"
        />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/AppSettings"
        android:text="@string/privacy_policy"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_50"
        />

    <TextView
        android:id="@+id/open_source"
        style="@style/AppSettings"
        android:text="@string/open_source_licenses"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_50"
        />


</LinearLayout>
