<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:orientation="horizontal"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/specifications"
        android:layout_width="0dp"
        android:layout_height="32.5dp"
        android:layout_weight="1"
        android:background="@drawable/blue_rounded_button_selector"
        android:fontFamily="@font/proxima_nova_semibold"
        android:gravity="center"
        android:text="@string/specifications"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/partNumber"
        android:layout_width="0dp"
        android:layout_height="32.5dp"
        android:layout_marginStart="@dimen/space_15"
        android:layout_weight="1"
        android:background="@drawable/blue_rounded_button_selector"
        android:fontFamily="@font/proxima_nova_semibold"
        android:gravity="center"
        android:text="@string/part_number"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pilotPins"
        android:layout_width="0dp"
        android:layout_height="32.5dp"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_weight="1"
        android:background="@drawable/blue_rounded_button_selector"
        android:fontFamily="@font/proxima_nova_semibold"
        android:gravity="center"
        android:text="@string/pilot_pins"
        android:textColor="@color/white"
        android:textSize="12sp" />
</merge>
